refactoring html structure

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -249,10 +249,12 @@
 
         <!-- start with mainSection -->
         <main>
+
+            <!-- start with titleSection -->
             <div class="titleSection">
                 <h1 class="titleSection__h1">Auf welche Musik stehst du?</h1>
-                <h3 class="titleSection__h3">Egal auf was du stehst wir haben alles für deinen Musikgeschmack und
-                    garantieren dir eine erlebnisreiche Festivalzeit
+                <h3 class="titleSection__h3">Unsere FestivalLovers verdienen nur das Beste. Wir bringen euch alle
+                    Festivals, Stars & Bands sowie Infos für einen genialen und unvergessenlichen Musiksommer.
                 </h3>
                 <div class="titleSection__genres">
                     <button class="titleSection__btnGenres">
@@ -364,224 +366,38 @@
                     <button class="titleSection__btn titleSection__btn--show footerLabels">FILTER ANZEIGEN</button>
                     <button class="titleSection__btn titleSection__btn--restore footerLabels">FILTER ZURÜCKSETZEN
                     </button>
-                    <button class="titleSection__btn titleSection__btn--result footerLabels">ERGEBNIS ANZEIGEN</button>
                 </div>
 
-                <img alt="festival picture" class="titleSection__img" src="images/Links/BigTeaser.png"
-                     title="festival picture">
             </div>
-            <div class="magazinSection" id="magazinSection">
-                <h1 class="magazinSection__h1">Magazin</h1>
-                <div class="magazinSection__container">
-                    <div class="magazineSection__box magazineSection__box--A">
-                        <h2 class="magazineSection__Title">Einfach bloss nichts vergessen</h2>
-                        <p class="magazinSection__text">
-                            Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
-                            Handtuch: 3 Tage nass! Zahnbürste, Deo, Socken: 3 Tage baah! Es geht auch anders.
-                            Der Festivalguide Check gegen Alzheimer und Co.
-                        </p>
-                        <button class="magazineSection__box--Btn btnTabsHeader">LESEN</button>
-                        <div class="magazineSection__box--border"></div>
-                    </div>
-                    <div class="magazineSection__box">
-                        <h2 class="magazineSection__Title">Wie soll ich mich bei Gewitter verhalten?</h2>
-                        <p class="magazinSection__text">
-                            Die Sturm- und Gewitterwarnungen auf Festivals nehmen zu. Blitzeinschläge führen immer
-                            wieder zu zahlreichen Verletzten. Da wir nicht davon ausgehen können,
-                            dass sich diese Entwicklung wieder umkehrt
-                            , müssen wir damit rechnen, dass Festivals immer wieder davon betroffen sein werden.
-                            Was sollte man also beachten?
-                        </p>
-                        <button class="magazineSection__box--Btn btnTabsHeader">LESEN</button>
-                        <div class="magazineSection__box--border"></div>
-                    </div>
-                    <div class="magazineSection__box">
-                        <h2 class="magazineSection__Title">7 Life Hacks für den Festivalbesuch</h2>
-                        <p class="magazinSection__text">
-                            Mit diesen Tricks macht ihr euch das Campen auf dem Festival noch leichter.
-                            Es gibt viele kreative Lösungen mit Einmalseife, Klopapierspender,
-                            Grillanzünder, Kaffebeutel und Strohhalmen.
-                        </p>
-                        <button class="magazineSection__box--Btn btnTabsHeader">LESEN</button>
-                        <div class="magazineSection__box--border"></div>
-                    </div>
-                    <div class="magazineSection__box">
-                        <h2 class="magazineSection__Title">Erste Hilfe und die Reiseapotheke</h2>
-                        <p class="magazinSection__text">
-                            Was der Arzt rät: Sonnenstich, Kater, Fuss umgeknickt … Festivals stecken voller
-                            versteckten Gefahren. Wir haben unseren Hausarzt angerufen und gefragt,
-                            was man unbedingt bedenken und beachten sollte damit man wieder gesund
-                            und munter vom Festival nach Hause kommt.
-                        </p>
-                        <button class="magazineSection__box--Btn btnTabsHeader">LESEN</button>
-                        <div class="magazineSection__box--border"></div>
-                    </div>
-                    <div class="magazineSection__box magazineSection__box--B">
-                        <h2 class="magazineSection__Title">Tipps zum Bier kaltstellen</h2>
-                        <p class="magazinSection__text">
-                            Mit diesen Ratschlägen habt ihr auch auf dem Festival
-                            immer kühles Bier. Was will man noch mehr.
-                        </p>
-                        <button class="magazineSection__box--Btn btnTabsHeader">LESEN</button>
-                        <div class="magazineSection__box--border"></div>
-                    </div>
-                    <div class="magazineSection__box">
-                        <h2 class="magazineSection__Title">Wo stelle ich mein Zelt auf?</h2>
-                        <p class="magazinSection__text">
-                            Der prefekt Platz auf dem Campingplatz muss zuerst gefunden werden.
-                            Ältere Festivalbesucher können bestätigen:
-                            Die Auswahl des Zeltplatzes ist ein Lernen durch Schmerzen.
-                            Wir möchten euch daher gut vorbereiten um euch ein paar Qualen ersparen zu können.
-                        </p>
-                        <button class="magazineSection__box--Btn btnTabsHeader">LESEN</button>
-                        <div class="magazineSection__box--border"></div>
-                    </div>
+            <!-- end of titleSection -->
+
+            <!-- start with overviewSection -->
+
+            <div class="overviewSection">
+
+                <div class="overviewSection__controllPanel">
+
 
 
                 </div>
-                <button class="secondaryButton btnTabsHeader">MEHR ANZEIGEN</button>
-            </div>
 
-            <div class="bannerSection">
-                <div class="bannerSection__pic"></div>
-                <!--                <img class="bannerSection__pic" alt="iPhone picture" src="images/Links/iPhone-6s-Rose-Gold.svg">-->
-                <div class="bannerSection__content">
-                    <h1 class="bannerSection__title">Mit der App unabhängig am Festival feiern.</h1>
-                    <button class="bannerSection__btn">APP DOWNLOADEN</button>
-                    <div class="bannerSection__imgBox">
-                        <div class="bannerSection__img bannerSection__img--google"></div>
-                        <div class="bannerSection__img bannerSection__img--apple"></div>
-                    </div>
-                </div>
-            </div>
+                <div class="overviewSection__container">
 
-            <div class="discoverySection">
-
-                <h1 class="discoverySection__title">Entdeckungen</h1>
-                <p class="discoverySection__intro lead">
-                    Sei offen für neues und geniesse unerwartete
-                    Musikerlebnisse. Höre dir
-                    die Samples an und entdecke deine Leidenschaft</p>
-                <div class="discoverySection__imgContainer">
-                    <div class="discoverySection__imgBox discoverySection__imgBox--jazz">
-                        <div class="discoverySection__play"></div>
-                        <audio src="music/jazz.mp3"></audio>
-                    </div>
-                    <div class="discoverySection__imgBox discoverySection__imgBox--hiphop">
-                        <div class="discoverySection__play"></div>
-                        <audio src="music/hiphop.mp3"></audio>
-                    </div>
-                    <div class="discoverySection__imgBox discoverySection__imgBox--indie">
-                        <div class="discoverySection__play"></div>
-                        <audio src="music/indie.mp3"></audio>
-                    </div>
-                    <div class="discoverySection__imgBox discoverySection__imgBox--poprock">
-                        <div class="discoverySection__play"></div>
-                        <audio src="music/poprock.mp3"></audio>
-                    </div>
-                    <div class="discoverySection__imgBox discoverySection__imgBox--electronic">
-                        <div class="discoverySection__play"></div>
-                        <audio src="music/electronic.mp3"></audio>
-                    </div>
-                </div>
-
-                <button class="discoverySection__btn secondaryButton btnTabsHeader">MEHR SAMPLES</button>
-
-
-            </div>
-
-            <div class="newsSection" id="newsSection">
-                <h1 class="newsSection__h1">NEWS</h1>
-
-                <div class="newsSection__container">
-
-                    <div class="newsSection__Box">
-                        <div class="newsSection__pic"></div>
-                        <div class="newsSection__content">
-                            <div class="newsSection__date breadcrumbInfosDatesLikes">3. Jun 2016</div>
-                            <div class="newsSection__intro copy">
-                                #festivallovers are you ready for a #competition #follow @envirofoneshop and we’ll
-                                announce next week #festival
-                            </div>
-                            <div class="newsSection__like">
-                                <div class="newsSection__heart"></div>
-                                <span class="newsSection__qty">15</span>
-                            </div>
-                        </div>
-
-
-                    </div>
-
-                    <div class="newsSection__Box">
-                        <div class="newsSection__pic"></div>
-                        <div class="newsSection__content">
-                            <div class="newsSection__date breadcrumbInfosDatesLikes">3. Jun 2016</div>
-                            <div class="newsSection__intro copy">
-                                #festivallovers are you ready for a #competition #follow @envirofoneshop and we’ll
-                                announce next week #festival
-                            </div>
-                            <div class="newsSection__like">
-                                <div class="newsSection__heart"></div>
-                                <span class="newsSection__qty">15</span>
-                            </div>
-                        </div>
-
-
-                    </div>
-                    <div class="newsSection__Box">
-                        <div class="newsSection__pic"></div>
-                        <div class="newsSection__content">
-                            <div class="newsSection__date breadcrumbInfosDatesLikes">3. Jun 2016</div>
-                            <div class="newsSection__intro copy">
-                                #festivallovers are you ready for a #competition #follow @envirofoneshop and we’ll
-                                announce next week #festival
-                            </div>
-                            <div class="newsSection__like">
-                                <div class="newsSection__heart"></div>
-                                <span class="newsSection__qty">15</span>
-                            </div>
-                        </div>
-
-
-                    </div>
-                    <div class="newsSection__Box">
-                        <div class="newsSection__pic"></div>
-                        <div class="newsSection__content">
-                            <div class="newsSection__date breadcrumbInfosDatesLikes">3. Jun 2016</div>
-                            <div class="newsSection__intro copy">
-                                #festivallovers are you ready for a #competition #follow @envirofoneshop and we’ll
-                                announce next week #festival
-                            </div>
-                            <div class="newsSection__like">
-                                <div class="newsSection__heart"></div>
-                                <span class="newsSection__qty">15</span>
-                            </div>
-                        </div>
-
-
-                    </div>
-                    <div class="newsSection__Box">
-                        <div class="newsSection__pic"></div>
-                        <div class="newsSection__content">
-                            <div class="newsSection__date breadcrumbInfosDatesLikes">3. Jun 2016</div>
-                            <div class="newsSection__intro copy">
-                                #festivallovers are you ready for a #competition #follow @envirofoneshop and we’ll
-                                announce next week #festival
-                            </div>
-                            <div class="newsSection__like">
-                                <div class="newsSection__heart"></div>
-                                <span class="newsSection__qty">15</span>
-                            </div>
-                        </div>
+                    <div class="overviewSection__box">
 
 
                     </div>
 
                 </div>
 
-                <button class="newsSection__btn secondaryButton btnTabsHeader">MEHR ANZEIGEN</button>
+
+
+
+
+
 
             </div>
+
 
             <!-- end of mainSection -->
         </main>
