display grid for contoll panel

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -370,12 +370,34 @@
 
             </div>
             <!-- end of titleSection -->
-
             <!-- start with overviewSection -->
 
             <div class="overviewSection">
 
-                <div class="overviewSection__controllPanel">
+                <div class="overviewSection__controlPanel copy">
+                    <label class="overviewSection__labelContainer">Date
+<!--                    <input type="date" id="date">-->
+                        <div class="overviewSection__dateIcon"></div>
+                    </label>
+
+                    <label class="overviewSection__labelContainer">Kanton auswählen
+                        <div class="overviewSection__locationIcon"></div>
+                    </label>
+
+                    <div class="overviewSection__tilesListContainer">
+
+                        <label class="overviewSection__labelContainer">Kacheln
+                            <div class="overviewSection__tilesIcon"></div>
+                        </label>
+
+                        <label class="overviewSection__labelContainer">Liste
+                            <div class="overviewSection__listIcon"></div>
+                        </label>
+
+
+                    </div>
+
+
 
 
 
