display grid for controll panel css finished

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -375,22 +375,23 @@
             <div class="overviewSection">
 
                 <div class="overviewSection__controlPanel copy">
-                    <label class="overviewSection__labelContainer">Date
+                    <!--container 1 -->
+                    <label class="overviewSection__labelContainer overviewSection__labelContainer--date">Date
 <!--                    <input type="date" id="date">-->
-                        <div class="overviewSection__dateIcon"></div>
+                        <div class="overviewSection__icon overviewSection__icon--date"></div>
                     </label>
-
-                    <label class="overviewSection__labelContainer">Kanton auswählen
-                        <div class="overviewSection__locationIcon"></div>
+                    <!--container 2 -->
+                    <label class="overviewSection__labelContainer overviewSection__labelContainer--location">Kanton auswählen
+                        <div class="overviewSection__icon overviewSection__icon--location"></div>
                     </label>
-
+                    <!--container 3 -->
                     <div class="overviewSection__tilesListContainer">
 
-                        <label class="overviewSection__labelContainer">Kacheln
+                        <label class="overviewSection__labelContainer overviewSection__labelContainer--tiles">Kacheln
                             <div class="overviewSection__tilesIcon"></div>
                         </label>
 
-                        <label class="overviewSection__labelContainer">Liste
+                        <label class="overviewSection__labelContainer overviewSection__labelContainer--list">Liste
                             <div class="overviewSection__listIcon"></div>
                         </label>
 
