css grid for cardBoxes

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -251,8 +251,8 @@
         <main>
 
             <!-- start with titleSection -->
-            <div class="titleSection">
-                <h1 class="titleSection__h1">Auf welche Musik stehst du?</h1>
+            <div class="titleSection ">
+                <h1 class="titleSection__h1">Alles für deinen Musikgeschmack</h1>
                 <h3 class="titleSection__h3">Unsere FestivalLovers verdienen nur das Beste. Wir bringen euch alle
                     Festivals, Stars & Bands sowie Infos für einen genialen und unvergessenlichen Musiksommer.
                 </h3>
@@ -376,30 +376,44 @@
 
                 <div class="overviewSection__controlPanel copy">
                     <!--container 1 -->
-                    <label class="overviewSection__labelContainer overviewSection__labelContainer--date">Date
-<!--                    <input type="date" id="date">-->
+                    <label class="overviewSection__labelContainer overviewSection__labelContainer--date">
+                        <span class="overviewSection__text overviewSection__text--date">Date</span>
                         <div class="overviewSection__icon overviewSection__icon--date"></div>
                     </label>
                     <!--container 2 -->
-                    <label class="overviewSection__labelContainer overviewSection__labelContainer--location">Kanton auswählen
+                    <label class="overviewSection__labelContainer overviewSection__labelContainer--location">
+                        <div class="overviewSection__text overviewSection__text--location">Kanton</div>
+                        <div class="overviewSection__text overviewSection__text--choose">auswählen</div>
                         <div class="overviewSection__icon overviewSection__icon--location"></div>
                     </label>
                     <!--container 3 -->
                     <div class="overviewSection__tilesListContainer">
 
-                        <label class="overviewSection__labelContainer overviewSection__labelContainer--tiles">Kacheln
+                        <label class="overviewSection__labelContainer overviewSection__labelContainer--tiles">
+                            <span class="overviewSection__text overviewSection__text--tiles">Kachelnspan</span>
                             <div class="overviewSection__tilesIcon"></div>
                         </label>
 
-                        <label class="overviewSection__labelContainer overviewSection__labelContainer--list">Liste
+                        <label class="overviewSection__labelContainer overviewSection__labelContainer--list">
+                            <span class="overviewSection__text overviewSection__text--list">Liste</span>
                             <div class="overviewSection__listIcon"></div>
                         </label>
 
 
                     </div>
+                </div>
 
+                <div class="overviewSection__cardContainer">
 
-
+                    <div class="overviewSection__cardBox"></div>
+                    <div class="overviewSection__cardBox"></div>
+                    <div class="overviewSection__cardBox"></div>
+                    <div class="overviewSection__cardBox"></div>
+                    <div class="overviewSection__cardBox"></div>
+                    <div class="overviewSection__cardBox"></div>
+                    <div class="overviewSection__cardBox"></div>
+                    <div class="overviewSection__cardBox"></div>
+                    <div class="overviewSection__cardBox"></div>
 
 
                 </div>
