embed the svg inline

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -378,25 +378,84 @@
                     <!--container 1 -->
                     <label class="overviewSection__labelContainer overviewSection__labelContainer--date">
                         <span class="overviewSection__text overviewSection__text--date">Date</span>
-                        <div class="overviewSection__icon overviewSection__icon--date"></div>
+<!--                        <div class="overviewSection__icon overviewSection__icon&#45;&#45;date"></div>-->
+                        <svg class="overviewSection__icon" width="9px" height="17px" viewBox="0 0 9 17" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
+                            <title>steuerung_sortierung</title>
+                            <desc>Created with Sketch.</desc>
+                            <defs></defs>
+                            <g  id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <g class="overviewSection__controllSort" id="steuerung_sortierung" transform="translate(-20.000000, -16.000000)" fill="#000000">
+                                    <g transform="translate(20.000000, 16.000000)" id="Shape">
+                                        <path d="M4.35185185,2.64444444 L7.37407407,5.66666667 L8.6962963,4.34444444 L4.35185185,0 L0.00740740741,4.34444444 L1.32962963,5.66666667 L4.35185185,2.64444444 L4.35185185,2.64444444 Z M4.35185185,14.3555556 L1.32962963,11.3333333 L0.00740740741,12.6555556 L4.35185185,17 L8.6962963,12.6555556 L7.37407407,11.3333333 L4.35185185,14.3555556 L4.35185185,14.3555556 Z"></path>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
                     </label>
                     <!--container 2 -->
                     <label class="overviewSection__labelContainer overviewSection__labelContainer--location">
                         <div class="overviewSection__text overviewSection__text--location">Kanton</div>
                         <div class="overviewSection__text overviewSection__text--choose">auswählen</div>
-                        <div class="overviewSection__icon overviewSection__icon--location"></div>
+                        <div ></div>
+                        <svg class="overviewSection__icon" width="17px" height="10px" viewBox="0 0 17 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
+                            <title>steuerung_dropdown</title>
+                            <desc>Created with Sketch.</desc>
+                            <defs></defs>
+                            <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <g class="overviewSection__controllDropdown" id="steuerung_dropdown" transform="translate(-16.000000, -19.000000)" fill="#010002">
+                                    <g transform="translate(24.363636, 24.000000) rotate(-90.000000) translate(-24.363636, -24.000000) translate(20.000000, 16.000000)" id="Shape">
+                                        <polygon points="8.2329697 15.9516768 0.0206060606 7.97559596 8.2329697 0 8.65842424 0.437818182 0.89769697 7.97559596 8.65842424 15.5135354"></polygon>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+
                     </label>
                     <!--container 3 -->
                     <div class="overviewSection__tilesListContainer">
 
                         <label class="overviewSection__labelContainer overviewSection__labelContainer--tiles">
-                            <span class="overviewSection__text overviewSection__text--tiles">Kachelnspan</span>
-                            <div class="overviewSection__tilesIcon"></div>
+                            <span class="overviewSection__text overviewSection__text--tiles">Kacheln</span>
+                            <svg class="overviewSection__icon" width="17px" height="17px" viewBox="0 0 17 17" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
+                                <title>steuerung_kacheln</title>
+                                <desc>Created with Sketch.</desc>
+                                <defs></defs>
+                                <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <g class="overviewSection__controllTiles" id="steuerung_kacheln" transform="translate(-16.000000, -16.000000)" fill="#000000">
+                                        <g transform="translate(16.000000, 16.000000)" id="Rectangle-path">
+                                            <rect x="9.67241379" y="0" width="7.32758621" height="7.32758621"></rect>
+                                            <rect x="0" y="0" width="7.32758621" height="7.32758621"></rect>
+                                            <rect x="0" y="9.67241379" width="7.32758621" height="7.32758621"></rect>
+                                            <rect x="9.67241379" y="9.67241379" width="7.32758621" height="7.32758621"></rect>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
                         </label>
 
                         <label class="overviewSection__labelContainer overviewSection__labelContainer--list">
                             <span class="overviewSection__text overviewSection__text--list">Liste</span>
-                            <div class="overviewSection__listIcon"></div>
+                            <svg class="overviewSection__icon" width="24px" height="17px" viewBox="0 0 24 17" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
+                                <title>steuerung_liste</title>
+                                <desc>Created with Sketch.</desc>
+                                <defs></defs>
+                                <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <g class="overviewSection__controllList" id="steuerung_liste" transform="translate(-12.000000, -16.000000)" fill="#000000">
+                                        <g transform="translate(12.000000, 16.000000)" id="Rectangle-path">
+                                            <rect x="5.08982036" y="13.488024" width="18.4251497" height="3.35928144"></rect>
+                                            <rect x="5.08982036" y="6.87125749" width="18.4251497" height="3.35928144"></rect>
+                                            <rect x="5.08982036" y="0.0508982036" width="18.4251497" height="3.35928144"></rect>
+                                            <rect x="0" y="13.5898204" width="3.35928144" height="3.35928144"></rect>
+                                            <rect x="0" y="6.87125749" width="3.35928144" height="3.35928144"></rect>
+                                            <rect x="0" y="0.0508982036" width="3.35928144" height="3.35928144"></rect>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
                         </label>
 
 
