--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -946,6 +946,8 @@
 
                 </div>
 
+                <button class="overviewSection__btn secondaryButton btnTabsHeader">MEHR ANZEIGEN</button>
+
 
             </div>
 
