list view structure

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -479,7 +479,7 @@
                     </div>
                 </div>
 
-                <div class="overviewSection__cardContainer">
+                <div class="overviewSection__cardContainerTiles overviewSection__cardContainerList ">
 
                     <div class="overviewSection__cardBoxTiles">
                         <div class="overviewSection__pic"></div>
