start with js for tiles/list view

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -376,7 +376,7 @@
             <div class="overviewSection">
 
                 <div class="overviewSection__controlPanel copy">
-                    <!--container 1 -->
+                    <!--container 1 overviewSection -->
                     <label class="overviewSection__labelContainer overviewSection__labelContainer--date">
                         <span class="overviewSection__text overviewSection__text--date">Date</span>
                         <!--                        <div class="overviewSection__icon overviewSection__icon&#45;&#45;date"></div>-->
@@ -396,7 +396,7 @@
                             </g>
                         </svg>
                     </label>
-                    <!--container 2 -->
+                    <!--container 2 overviewSection -->
                     <label class="overviewSection__labelContainer overviewSection__labelContainer--location">
                         <div class="overviewSection__text overviewSection__text--location">Kanton</div>
                         <div class="overviewSection__text overviewSection__text--choose">auswählen</div>
@@ -420,12 +420,12 @@
                         </svg>
 
                     </label>
-                    <!--container 3 -->
-                    <div class="overviewSection__tilesListContainer">
+                    <!--container 3 overviewSection -->
+                    <div class="overviewSection__tilesContainer">
 
                         <label class="overviewSection__labelContainer overviewSection__labelContainer--tiles">
                             <span class="overviewSection__text overviewSection__text--tiles">Kacheln</span>
-                            <svg class="overviewSection__icon" width="17px" height="17px" viewBox="0 0 17 17"
+                            <svg class="overviewSection__icon overviewSection__icon--tiles " width="17px" height="17px" viewBox="0 0 17 17"
                                  version="1.1" xmlns="http://www.w3.org/2000/svg"
                                  xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
@@ -449,7 +449,7 @@
 
                         <label class="overviewSection__labelContainer overviewSection__labelContainer--list">
                             <span class="overviewSection__text overviewSection__text--list">Liste</span>
-                            <svg class="overviewSection__icon" width="24px" height="17px" viewBox="0 0 24 17"
+                            <svg class="overviewSection__icon overviewSection__icon-list" width="24px" height="17px" viewBox="0 0 24 17"
                                  version="1.1" xmlns="http://www.w3.org/2000/svg"
                                  xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
@@ -479,9 +479,11 @@
                     </div>
                 </div>
 
-                <div class="overviewSection__cardContainerTiles overviewSection__cardContainerList ">
 
-                    <div class="overviewSection__cardBoxTiles">
+                <!-- start with cardContainer -->
+                <div class="overviewSection__cardContainerTiles">
+
+                    <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--indie">
@@ -534,7 +536,7 @@
 
 
                     </div>
-                    <div class="overviewSection__cardBoxTiles">
+                    <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--hiphop">
@@ -585,7 +587,7 @@
 
 
                     </div>
-                    <div class="overviewSection__cardBoxTiles">
+                    <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--electronic">
@@ -636,7 +638,7 @@
 
 
                     </div>
-                    <div class="overviewSection__cardBoxTiles">
+                    <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--jazz">
@@ -688,7 +690,7 @@
 
 
                     </div>
-                    <div class="overviewSection__cardBoxTiles">
+                    <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--indie">
@@ -739,7 +741,7 @@
 
 
                     </div>
-                    <div class="overviewSection__cardBoxTiles">
+                    <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--poprock">
@@ -790,7 +792,7 @@
 
 
                     </div>
-                    <div class="overviewSection__cardBoxTiles">
+                    <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--hiphop">
@@ -842,7 +844,7 @@
 
 
                     </div>
-                    <div class="overviewSection__cardBoxTiles">
+                    <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--poprock">
@@ -893,7 +895,7 @@
 
 
                     </div>
-                    <div class="overviewSection__cardBoxTiles">
+                    <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--jazz">
